--- a/views/css/main.css
+++ b/views/css/main.css
@@ -237,7 +237,16 @@
     padding: 10px 30px 9px 22px;
     margin-bottom: 20px;
   }
-  
+
+  .w90{
+    width: 90%!important;
+
+  } 
+
+  .w75{
+    width: 75%!important;
+
+  }
   .rs1-wrap-input100 {
     width: calc((100% - 30px) / 2);
   }
@@ -254,7 +263,7 @@
   
   .input100 {
     display: inline;
-    width: 75%;
+    width: 100%;
     background: transparent;
     font-family: Montserrat-SemiBold;
     font-size: 18px;
