--- a/views/preInstallation.html
+++ b/views/preInstallation.html
@@ -44,29 +44,29 @@
 
 				<div class="wrap-input100 bg1 rs1-wrap-input100">
 					<span class="label-input100 pr-3">Hospital's Name* :</span>
-					<input class="input100" type="text" name="hospital" placeholder="Enter The Hospital's Name"
+					<input class="input100 w75" type="text" name="hospital" placeholder="Enter The Hospital's Name"
 						required>
 				</div>
 
 				<div class="wrap-input100 bg1 rs1-wrap-input100">
 					<span class="label-input100 pr-3">Equipment's Name* :</span>
-					<input class="input100" type="text" name="equipment" placeholder="Enter The Equipment's Name"
+					<input class="input100 w75" type="text" name="equipment" placeholder="Enter The Equipment's Name"
 						required>
 				</div>
 
 				<div class="wrap-input100 bg1 rs1-wrap-input100">
 					<span class="label-input100 pr-3">Department's Name* :</span>
-					<input class="input100" type="text" name="department" placeholder="Enter The Department's Name"
+					<input class="input100 w75" type="text" name="department" placeholder="Enter The Department's Name"
 						required>
 				</div>
 
 				<div class="wrap-input100 bg1 rs2-wrap-input100">
 					<span class="label-input100 pr-3">Floor* :</span>
-					<input class="input100" type="text" name="floor" placeholder="Enter The Floor" required>
+					<input class="input100 w75" type="text" name="floor" placeholder="Enter The Floor" required>
 				</div>
 				<div class="wrap-input100 bg1 rs2-wrap-input100">
 					<span class="label-input100 pr-3">Room* :</span>
-					<input class="input100" type="text" name="room" placeholder="Enter The Room" required>
+					<input class="input100 w75" type="text" name="room" placeholder="Enter The Room" required>
 				</div>
 				<div class="table">
 
@@ -182,12 +182,12 @@
 								<input class="input-checkbox100" id="ckb1" type="checkbox" name="lockkeyCheck">
 							</div>						</div>
 						<div class="cell">
-							<div class="wrap-input100 bg1 wrap-input100 mt-3">
+							<div class="wrap-input100 bg1 mt-3">
 								<input class="input100" type="text" name="lockkeyRON" placeholder="Enter The Name">
 							</div>
 						</div>
 						<div class="cell pl-3">
-							<div class="wrap-input100 bg1 wrap-input100 mt-3">
+							<div class="wrap-input100 bg1 mt-3">
 								<input class="input100" type="text" name="lockkeyComment"
 									placeholder="Enter Any Comments">
 							</div>
@@ -195,15 +195,15 @@
 					</div>
 
 				</div>
-				<div class="wrap-input100 bg1 wrap-input100">
+				<div class="wrap-input100 bg1 ">
 					<span class="label-input100 pr-3">Date:</span>
-					<input class="input100  js-datepicker" type="date" name="equipment" placeholder="Enter The Date"
+					<input class="input100 w90" type="date" name="equipment" placeholder="Enter The Date"
 						required>
 					<i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
 				</div>
-				<div class="wrap-input100 bg1 wrap-input100">
+				<div class="wrap-input100 bg1 ">
 					<span class="label-input100 pr-3">Name* :</span>
-					<input class="input100" type="text" name="name" placeholder="Enter Your Name" required>
+					<input class="input100 w90" type="text" name="name" placeholder="Enter Your Name" required>
 				</div>
 
 
