--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,28 @@
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext"
         rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="vendor/noui/nouislider.min.css">
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="css/util.css">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
     <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -101,53 +121,63 @@
     <!-- About -->
     <div id="about" class="cards-1">
         <div style="background-color:#DFF7F9;" class="pt-5">
-        <div class="container pt-5">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>Medical equipment tracking and maintenance</h2>
-                    <p class="w-100 p-heading p-large">Benefits include faster diagnosis, less invasive surgical procedures,
-                        and reduced hospital stays. A clinical engineering department’s role in any medical setting is
-                        to ensure that all clinical/medical equipment is maintained, tested, and in a reliable working
-                        condition at all times.</p>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-            <div class="row">
-                <div class="col-lg-12">
+            <div class="container pt-5">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2>Medical equipment tracking and maintenance</h2>
+                        <p class="w-100 p-heading p-large">Benefits include faster diagnosis, less invasive surgical
+                            procedures,
+                            and reduced hospital stays. A clinical engineering department’s role in any medical setting
+                            is
+                            to ensure that all clinical/medical equipment is maintained, tested, and in a reliable
+                            working
+                            condition at all times.</p>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+                <div class="row">
+                    <div class="col-lg-12">
 
-                    <!-- Card -->
-                    <div class="card">
-                        <img class="card-image" src="images/services-icon-1.svg" alt="alternative">
-                        <div class="card-body">
-                            <h4 class="card-title">Management Advantages</h4>
-                            <p>Improving the tracking and management of medical device assets to ensure regulatory compliance, reduce costs and improve healthcare standards, is essential. Hospitals compliance and risk mitigation regarding medical equipment is critical</p>
+                        <!-- Card -->
+                        <div class="card">
+                            <img class="card-image" src="images/services-icon-1.svg" alt="alternative">
+                            <div class="card-body">
+                                <h4 class="card-title">Management Advantages</h4>
+                                <p>Improving the tracking and management of medical device assets to ensure regulatory
+                                    compliance, reduce costs and improve healthcare standards, is essential. Hospitals
+                                    compliance and risk mitigation regarding medical equipment is critical</p>
+                            </div>
                         </div>
-                    </div>
-                    <!-- end of card -->
+                        <!-- end of card -->
 
-                    <!-- Card -->
-                    <div class="card">
-                        <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
-                        <div class="card-body">
-                            <h4 class="card-title">Medical Challenges</h4>
-                            <p>Medical equipment presents some unique challenges. They tend to have shorter lives than more traditional assets. Therefore, require more focused and frequent attention.requiring specialist expertise to use, manage, assess and repair them.</p>
+                        <!-- Card -->
+                        <div class="card">
+                            <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
+                            <div class="card-body">
+                                <h4 class="card-title">Medical Challenges</h4>
+                                <p>Medical equipment presents some unique challenges. They tend to have shorter lives
+                                    than more traditional assets. Therefore, require more focused and frequent
+                                    attention.requiring specialist expertise to use, manage, assess and repair them.</p>
+                            </div>
                         </div>
-                    </div>
-                    <!-- end of card -->
+                        <!-- end of card -->
 
-                    <!-- Card -->
-                    <div class="card">
-                        <img class="card-image" src="images/services-icon-3.svg" alt="alternative">
-                        <div class="card-body">
-                            <h4 class="card-title">Accessible Information</h4>
-                            <p>Accessible and reliable information about medical equipment assets is paramount. Managers and decision-makers need access to information that includes operating performance, risk-level profile, estimated life, maintenance programs, values and costs, and many other parameters.</p>
+                        <!-- Card -->
+                        <div class="card">
+                            <img class="card-image" src="images/services-icon-3.svg" alt="alternative">
+                            <div class="card-body">
+                                <h4 class="card-title">Accessible Information</h4>
+                                <p>Accessible and reliable information about medical equipment assets is paramount.
+                                    Managers and decision-makers need access to information that includes operating
+                                    performance, risk-level profile, estimated life, maintenance programs, values and
+                                    costs, and many other parameters.</p>
+                            </div>
                         </div>
-                    </div>
-                    <!-- end of card -->
+                        <!-- end of card -->
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div>
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div>
         <div class="basic-3 pt-5">
             <div class="container ">
                 <div class="row">
@@ -172,7 +202,8 @@
                         </div> <!-- end of image-container -->
                         <!-- end of video preview -->
 
-                        <p>This video will show you how effective inventory management through automated technology can reduce inventory, increase visibility and streamline charge capture.</p>
+                        <p>This video will show you how effective inventory management through automated technology can
+                            reduce inventory, increase visibility and streamline charge capture.</p>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
@@ -182,7 +213,7 @@
 
     <div id="forms">
         <!-- Details 1 -->
-        <div class="basic-2"style="background-color:#DFF7F9;">
+        <div class="basic-2" style="background-color:#DFF7F9;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -191,7 +222,8 @@
                             <ul class="list-unstyled li-space-lg">
                                 <li class="media">
                                     <i class="fas fa-check"></i>
-                                    <div class="media-body">Pre-procurement needs assessment, engineer review, and committee approval
+                                    <div class="media-body">Pre-procurement needs assessment, engineer review, and
+                                        committee approval
                                     </div>
                                 </li>
                                 <li class="media">
@@ -259,7 +291,7 @@
         <!-- end of details 2 -->
 
         <!-- Details 3 -->
-        <div class="basic-2"style="background-color:#DFF7F9;">
+        <div class="basic-2" style="background-color:#DFF7F9;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -582,11 +614,18 @@
     <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
     <script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
     <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-    <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
     <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
     <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
     <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
     <script src="js/scripts.js"></script> <!-- Custom scripts -->
+    	<!--===============================================================================================-->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/animsition/js/animsition.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
 </body>
 
 </html>
