--- a/views/index.html
+++ b/views/index.html
@@ -169,7 +169,7 @@
                                 <p>Accessible and reliable information about medical equipment assets is paramount.
                                     Managers and decision-makers need access to information that includes operating
                                     performance, risk-level profile, estimated life, maintenance programs, values and
-                                    costs, and many other parameters.</p>
+                                    costs.</p>
                             </div>
                         </div>
                         <!-- end of card -->
