--- a/views/index.html
+++ b/views/index.html
@@ -219,7 +219,7 @@
                     <div class="col-lg-6">
                         <div class="text-container p-5">
                             <h2>Pre-Installation Checklist</h2>
-                            <ul class="list-unstyled li-space-lg">
+                            <ul class="list-unstyled li-space-lg mt-3">
                                 <li class="media">
                                     <i class="fas fa-check"></i>
                                     <div class="media-body">Pre-procurement needs assessment, engineer review, and
@@ -236,8 +236,8 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">FORM</a>
-                            <a class="btn-solid-reg popup-with-move-anim" href="">VIEW DATA</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="#details-lightbox-1">FORM</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
 
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
@@ -264,7 +264,7 @@
                     <div class="col-lg-6">
                         <div class="text-container p-5">
                             <h2>Form Two</h2>
-                            <ul class="list-unstyled li-space-lg">
+                            <ul class="list-unstyled li-space-lg mt-3">
                                 <li class="media">
                                     <i class="fas fa-check"></i>
                                     <div class="media-body">BLA BLA BLA
@@ -280,8 +280,8 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">FORM</a>
-                            <a class="btn-solid-reg popup-with-move-anim" href="">VIEW DATA</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="#details-lightbox-2">FORM</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
 
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
@@ -297,7 +297,7 @@
                     <div class="col-lg-6">
                         <div class="text-container p-5">
                             <h2>Form Three</h2>
-                            <ul class="list-unstyled li-space-lg">
+                            <ul class="list-unstyled li-space-lg mt-3">
                                 <li class="media">
                                     <i class="fas fa-check"></i>
                                     <div class="media-body">BLA BLA BLA
@@ -312,8 +312,8 @@
                                     <div class="media-body">BLA BLA BLA
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-3">FORM</a>
-                            <a class="btn-solid-reg popup-with-move-anim" href="">VIEW DATA</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="#details-lightbox-3">FORM</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
 
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
