--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -658,6 +658,7 @@ input[type='checkbox'] {
 .navbar-custom .nav-item .nav-link {
 	padding: 0.625rem 0.75rem 0.625rem 0.75rem;
 	color: #393939;
+	font-size: 19px;	
 	text-decoration: none;
 	transition: all 0.2s ease;
 }
