--- a/views/index.html
+++ b/views/index.html
@@ -74,16 +74,16 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link page-scroll mr-3" href="#header">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#about">About</a>
+                    <a class="nav-link page-scroll mr-3" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#forms">Forms</a>
+                    <a class="nav-link page-scroll mr-3" href="#forms">Forms</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#team">Team</a>
+                    <a class="nav-link page-scroll pr-5 mr-3" href="#team">Team</a>
                 </li>
 
             </ul>
