--- a/views/index.html
+++ b/views/index.html
@@ -381,7 +381,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row notheader">
                             <div class="cell">
                                 Pre-Installation Form Copied
                             </div>
@@ -404,7 +404,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row notheader">
                             <div class="cell">
                                 Required Tools Available
                             </div>
@@ -426,7 +426,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row notheader">
                             <div class="cell">
                                 Required Supplies Available
                             </div>
@@ -450,7 +450,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row notheader">
                             <div class="cell">
                                 Site Can Be Locked After Hours
                             </div>
@@ -472,7 +472,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row notheader">
                             <div class="cell">
                                 Lock Keys Assigned To Personnel
                             </div>
