--- a/views/index.html
+++ b/views/index.html
@@ -236,7 +236,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="#details-lightbox-1">FORM</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-1">FORM</a>
                             <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
 
                         </div> <!-- end of text-container -->
@@ -280,7 +280,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="#details-lightbox-2">FORM</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-2">FORM</a>
                             <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
 
                         </div> <!-- end of text-container -->
@@ -312,7 +312,7 @@
                                     <div class="media-body">BLA BLA BLA
                                 </li>
                             </ul>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="#details-lightbox-3">FORM</a>
+                            <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-3">FORM</a>
                             <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
 
                         </div> <!-- end of text-container -->
