--- a/views/index.html
+++ b/views/index.html
@@ -340,7 +340,7 @@
 
                     <div class="wrap-input100 bg1 rs1-wrap-input100">
                         <span class="label-input100 pr-3">Hospital's Name* :</span>
-                        <input class="input100 w75" type="text" name="hospital" placeholder="Enter The Hospital's Name"
+                        <input class="input100" type="text" name="hospital" placeholder="Enter The Hospital's Name"
                             required>
                     </div>
 
