--- a/views/index.html
+++ b/views/index.html
@@ -124,7 +124,7 @@
             <div class="container pt-5">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2>Medical equipment tracking and maintenance</h2>
+                        <h2>Medical Equipment Tracking And Maintenance</h2>
                         <p class="w-100 p-heading p-large">Benefits include faster diagnosis, less invasive surgical
                             procedures,
                             and reduced hospital stays. A clinical engineering department’s role in any medical setting
