--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Website Title -->
-    <title>Management System</title>
+    <title>Hospital Tagline</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext"
@@ -80,9 +80,6 @@
                     <a class="nav-link page-scroll mr-3" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll mr-3" href="#forms">Forms</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link page-scroll pr-5 mr-3" href="#team">Team</a>
                 </li>
 
@@ -103,7 +100,8 @@
                             <h1><span class="turquoise">Medical Equipment</span> Management System</h1>
                             <p class="p-large">Medical equipment asset management and first-rate medical equipment
                                 enhance the quality of healthcare provided to patients.</p>
-                            <a class="btn-solid-lg page-scroll" href="#about">DISCOVER</a>
+                            <a class="btn-solid-lg page-scroll" href="management_system.html">LOGIN TO THE  
+                                SYSTEM</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
@@ -211,340 +209,11 @@
     </div> <!-- end of cards-1 -->
     <!-- end of about -->
 
-    <div id="forms">
-        <!-- Details 1 -->
-        <div class="basic-2" style="background-color:#DFF7F9;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="text-container p-5">
-                            <h2>Pre-Installation Checklist</h2>
-                            <ul class="list-unstyled li-space-lg mt-3">
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Pre-procurement needs assessment, engineer review, and
-                                        committee approval
-                                    </div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Procurement - equipment selection and validation</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">Receipt of Equipment - setup, training, and testing
-                                    </div>
-                                </li>
-                            </ul>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-1">FORM</a>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
-
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
-                    <div class="col-lg-6">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/a.png" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of basic-1 -->
-        <!-- end of details 1 -->
-
-
-        <!-- Details 2 -->
-        <div class="basic-2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/b.png" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                    <div class="col-lg-6">
-                        <div class="text-container p-5">
-                            <h2>Form Two</h2>
-                            <ul class="list-unstyled li-space-lg mt-3">
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">BLA BLA BLA
-                                    </div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">BLA BLA BLA</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">BLA BLA BLA
-                                    </div>
-                                </li>
-                            </ul>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-2">FORM</a>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
-
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of basic-2 -->
-        <!-- end of details 2 -->
-
-        <!-- Details 3 -->
-        <div class="basic-2" style="background-color:#DFF7F9;">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="text-container p-5">
-                            <h2>Form Three</h2>
-                            <ul class="list-unstyled li-space-lg mt-3">
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">BLA BLA BLA
-                                    </div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">BLA BLA BLA</div>
-                                </li>
-                                <li class="media">
-                                    <i class="fas fa-check"></i>
-                                    <div class="media-body">BLA BLA BLA
-                                </li>
-                            </ul>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5 mr-2" href="#details-lightbox-3">FORM</a>
-                            <a class="btn-solid-reg popup-with-move-anim mt-5" href="">VIEW DATA</a>
-
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
-                    <div class="col-lg-6">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/c.png" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of basic-3 -->
-        <!-- end of details 3 -->
-    </div>
-    <!-- Details Lightboxes -->
-    <!-- Details Lightbox 1 -->
-    <div id="details-lightbox-1" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="container-contact100">
-            <div class="wrap-contact100">
-                <form class="contact100-form validate-form">
-                    <span class="contact100-form-title">
-                        Pre-Installation Form
-                    </span>
-
-
-                    <div class="wrap-input100 bg1 rs1-wrap-input100">
-                        <span class="label-input100 pr-3">Hospital's Name* :</span>
-                        <input class="input100" type="text" name="hospital" placeholder="Enter The Hospital's Name"
-                            required>
-                    </div>
-
-                    <div class="wrap-input100 bg1 rs1-wrap-input100">
-                        <span class="label-input100 pr-3">Equipment's Name* :</span>
-                        <input class="input100" type="text" name="equipment" placeholder="Enter The Equipment's Name"
-                            required>
-                    </div>
-
-                    <div class="wrap-input100 bg1 rs1-wrap-input100">
-                        <span class="label-input100 pr-3">Department's Name* :</span>
-                        <input class="input100" type="text" name="department" placeholder="Enter The Department's Name"
-                            required>
-                    </div>
-
-                    <div class="wrap-input100 bg1 rs2-wrap-input100">
-                        <span class="label-input100 pr-3">Floor* :</span>
-                        <input class="input100" type="text" name="floor" placeholder="Enter The Floor" required>
-                    </div>
-                    <div class="wrap-input100 bg1 rs2-wrap-input100">
-                        <span class="label-input100 pr-3">Room* :</span>
-                        <input class="input100" type="text" name="room" placeholder="Enter The Room" required>
-                    </div>
-                    <div class="table">
-
-                        <div class="row header">
-                            <div class="cell">
-                                Task Description
-                            </div>
-                            <div class="cell">
-                                Check
-                            </div>
-                            <div class="cell pl-5">
-                                Responsibility of (Name)
-                            </div>
-                            <div class="cell pl-5">
-                                Comments
-                            </div>
-                        </div>
-
-                        <div class="row notheader">
-                            <div class="cell">
-                                Pre-Installation Form Copied
-                            </div>
-                            <div class="cell">
-                                <div class="contact100-form-checkbox">
-                                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="preinstallCheck">
-                                </div>
-                            </div>
-                            <div class="cell">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="preinstallRON"
-                                        placeholder="Enter The Name">
-                                </div>
-                            </div>
-                            <div class="cell pl-3">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="preinstallComment"
-                                        placeholder="Enter Any Comments">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row notheader">
-                            <div class="cell">
-                                Required Tools Available
-                            </div>
-                            <div class="cell">
-                                <div class="contact100-form-checkbox">
-                                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="requiredtoolCheck">
-                                </div>
-                            </div>
-                            <div class="cell">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="requiredtoolRON"
-                                        placeholder="Enter The Name">
-                                </div>
-                            </div>
-                            <div class="cell pl-3">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="requiredtoolComment"
-                                        placeholder="Enter Any Comments">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row notheader">
-                            <div class="cell">
-                                Required Supplies Available
-                            </div>
-                            <div class="cell">
-                                <div class="contact100-form-checkbox">
-                                    <input class="input-checkbox100" id="ckb1" type="checkbox"
-                                        name="requiredsupllyCheck">
-                                </div>
-                            </div>
-                            <div class="cell">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="requiredsupplyRON"
-                                        placeholder="Enter The Name">
-                                </div>
-                            </div>
-                            <div class="cell pl-3">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="requiredsupplyComment"
-                                        placeholder="Enter Any Comments">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row notheader">
-                            <div class="cell">
-                                Site Can Be Locked After Hours
-                            </div>
-                            <div class="cell">
-                                <div class="contact100-form-checkbox">
-                                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="sitelockCheck">
-                                </div>
-                            </div>
-                            <div class="cell">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="sitelockRON" placeholder="Enter The Name">
-                                </div>
-                            </div>
-                            <div class="cell pl-3">
-                                <div class="wrap-input100 bg1 wrap-input100 mt-3">
-                                    <input class="input100" type="text" name="sitelockComment"
-                                        placeholder="Enter Any Comments">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row notheader">
-                            <div class="cell">
-                                Lock Keys Assigned To Personnel
-                            </div>
-                            <div class="cell">
-                                <div class="contact100-form-checkbox">
-                                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="lockkeyCheck">
-                                </div>
-                            </div>
-                            <div class="cell">
-                                <div class="wrap-input100 bg1 mt-3">
-                                    <input class="input100" type="text" name="lockkeyRON" placeholder="Enter The Name">
-                                </div>
-                            </div>
-                            <div class="cell pl-3">
-                                <div class="wrap-input100 bg1 mt-3">
-                                    <input class="input100" type="text" name="lockkeyComment"
-                                        placeholder="Enter Any Comments">
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="wrap-input100 bg1 ">
-                        <span class="label-input100 pr-3">Date:</span>
-                        <input class="input100" type="date" name="equipment" placeholder="Enter The Date" required>
-                        <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>
-                    </div>
-                    <div class="wrap-input100 bg1 ">
-                        <span class="label-input100 pr-3">Name* :</span>
-                        <input class="input100" type="text" name="name" placeholder="Enter Your Name" required>
-                    </div>
-
-
-
-                    <div class="container-contact100-form-btn">
-                        <button class="contact100-form-btn">
-                            <span>
-                                Submit
-                                <i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
-                            </span>
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of details lightbox 1 -->
-
-    <!-- Details Lightbox 2 -->
-    <div id="details-lightbox-2" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="container">
-            <h3>WAIT FOR IT</h3>
-        </div> <!-- end of container -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of details lightbox 2 -->
-
-    <!-- Details Lightbox 3 -->
-    <div id="details-lightbox-3" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="container">
-            <h3>WAIT FOR IT</h3>
-
-        </div> <!-- end of container -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of details lightbox 3 -->
-
-    <!-- end of details lightboxes -->
-
 
 
 
     <!-- Team -->
-    <div id="team" class="basic-4">
+    <div id="team" class="basic-4" style="background-color:#DFF7F9;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
