--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -865,6 +865,7 @@ input[type='checkbox'] {
 /*************************/
 /*     08. Details 2     */
 /*************************/
+
 .basic-2 {
 	padding-top: 3.75rem;
 	padding-bottom: 4rem;
@@ -1267,6 +1268,9 @@ input[type='checkbox'] {
 	background: url('../images/testimonials-background.jpg') center center no-repeat;
 	background-size: cover; 
 }
+.slider-2 i{
+color: #00a7bd!important;
+}
 
 .slider-2 .image-container {
 	margin-bottom: 4rem;
@@ -1283,7 +1287,7 @@ input[type='checkbox'] {
 
 .slider-2 .swiper-container {
 	position: static;
-	width: 90%;
+	width: 100%;
 	text-align: center;
 }
 
@@ -1675,7 +1679,7 @@ a:hover.back-to-top {
 	}
 
 	.slider-2 .swiper-container {
-		width: 85%;
+		width: 100%;
 	}
 
 	.slider-2 .swiper-button-prev {
@@ -1973,11 +1977,11 @@ a:hover.back-to-top {
 	}
 
 	.slider-2 .slider-container {
-		width: 88%;
+		width: 100%;
 	}
 
 	.slider-2 .swiper-container {
-		width: 82%;
+		width: 100%;
 	}
 	/* end of testimonials */
 
