--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,8 @@
     <title>Hospital Tagline</title>
 
     <!-- Styles -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext"
-        rel="stylesheet">
-    <link rel="icon" type="image/png" href="images/icons/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,600,700,700i&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="icon" type="image/png" href="images/icons/medical.png" />
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
     <!--===============================================================================================-->
@@ -60,12 +59,10 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Evolo</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img style="width: 180px;height: 80px;"
-                src="images/logo.png" alt="alternative"></a>
+        <a class="navbar-brand logo-image" href="index.html"><img style="width: 180px;height: 80px;" src="images/logo.png" alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-awesome fas fa-bars"></span>
             <span class="navbar-toggler-awesome fas fa-times"></span>
         </button>
@@ -86,7 +83,8 @@
             </ul>
 
         </div>
-    </nav> <!-- end of navbar -->
+    </nav>
+    <!-- end of navbar -->
     <!-- end of navigation -->
 
 
@@ -98,21 +96,28 @@
                     <div class="col-lg-6">
                         <div class="text-container">
                             <h1><span class="turquoise">Medical Equipment</span> Management System</h1>
-                            <p class="p-large">Medical equipment asset management and first-rate medical equipment
-                                enhance the quality of healthcare provided to patients.</p>
-                            <a class="btn-solid-lg page-scroll" href="management_system.html">LOGIN TO THE  
+                            <p class="p-large">Medical equipment asset management and first-rate medical equipment enhance the quality of healthcare provided to patients.</p>
+                            <a class="btn-solid-lg page-scroll" href="login.html">LOGIN TO THE  
                                 SYSTEM</a>
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
+                        </div>
+                        <!-- end of text-container -->
+                    </div>
+                    <!-- end of col -->
                     <div class="col-lg-6">
                         <div class="image-container">
                             <img class="img-fluid" src="images/top.png" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of header-content -->
-    </header> <!-- end of header -->
+                        </div>
+                        <!-- end of image-container -->
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
+            </div>
+            <!-- end of container -->
+        </div>
+        <!-- end of header-content -->
+    </header>
+    <!-- end of header -->
     <!-- end of header -->
 
 
@@ -123,15 +128,12 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h2>Medical Equipment Tracking And Maintenance</h2>
-                        <p class="w-100 p-heading p-large">Benefits include faster diagnosis, less invasive surgical
-                            procedures,
-                            and reduced hospital stays. A clinical engineering department’s role in any medical setting
-                            is
-                            to ensure that all clinical/medical equipment is maintained, tested, and in a reliable
-                            working
-                            condition at all times.</p>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
+                        <p class="w-100 p-heading p-large">Benefits include faster diagnosis, less invasive surgical procedures, and reduced hospital stays. A clinical engineering department’s role in any medical setting is to ensure that all clinical/medical equipment is maintained, tested,
+                            and in a reliable working condition at all times.</p>
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
                 <div class="row">
                     <div class="col-lg-12">
 
@@ -140,9 +142,8 @@
                             <img class="card-image" src="images/services-icon-1.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Management Advantages</h4>
-                                <p>Improving the tracking and management of medical device assets to ensure regulatory
-                                    compliance, reduce costs and improve healthcare standards, is essential. Hospitals
-                                    compliance and risk mitigation regarding medical equipment is critical</p>
+                                <p>Improving the tracking and management of medical device assets to ensure regulatory compliance, reduce costs and improve healthcare standards, is essential. Hospitals compliance and risk mitigation regarding medical equipment
+                                    is critical</p>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -152,9 +153,8 @@
                             <img class="card-image" src="images/services-icon-2.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Medical Challenges</h4>
-                                <p>Medical equipment presents some unique challenges. They tend to have shorter lives
-                                    than more traditional assets. Therefore, require more focused and frequent
-                                    attention.requiring specialist expertise to use, manage, assess and repair them.</p>
+                                <p>Medical equipment presents some unique challenges. They tend to have shorter lives than more traditional assets. Therefore, require more focused and frequent attention.requiring specialist expertise to use, manage, assess
+                                    and repair them.</p>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -164,49 +164,57 @@
                             <img class="card-image" src="images/services-icon-3.svg" alt="alternative">
                             <div class="card-body">
                                 <h4 class="card-title">Accessible Information</h4>
-                                <p>Accessible and reliable information about medical equipment assets is paramount.
-                                    Managers and decision-makers need access to information that includes operating
-                                    performance, risk-level profile, estimated life, maintenance programs, values and
-                                    costs.</p>
+                                <p>Accessible and reliable information about medical equipment assets is paramount. Managers and decision-makers need access to information that includes operating performance, risk-level profile, estimated life, maintenance
+                                    programs, values and costs.
+                                </p>
                             </div>
                         </div>
                         <!-- end of card -->
 
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
+            </div>
+            <!-- end of container -->
         </div>
         <div class="basic-3 pt-5">
             <div class="container ">
                 <div class="row">
                     <div class="col-lg-12">
                         <h2>Check Out The Video</h2>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
                 <div class="row">
                     <div class="col-lg-12">
 
                         <!-- Video Preview -->
                         <div class="image-container">
                             <div class="video-wrapper">
-                                <a class="popup-youtube" href="https://www.youtube.com/watch?v=u-15qZ8MrRY"
-                                    data-effect="fadeIn">
+                                <a class="popup-youtube" href="https://www.youtube.com/watch?v=u-15qZ8MrRY" data-effect="fadeIn">
                                     <img class="img-fluid" src="images/video.png" alt="alternative">
                                     <span class="video-play-button">
                                         <span></span>
                                     </span>
                                 </a>
-                            </div> <!-- end of video-wrapper -->
-                        </div> <!-- end of image-container -->
+                            </div>
+                            <!-- end of video-wrapper -->
+                        </div>
+                        <!-- end of image-container -->
                         <!-- end of video preview -->
 
-                        <p>This video will show you how effective inventory management through automated technology can
-                            reduce inventory, increase visibility and streamline charge capture.</p>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
+                        <p>This video will show you how effective inventory management through automated technology can reduce inventory, increase visibility and streamline charge capture.</p>
+                    </div>
+                    <!-- end of col -->
+                </div>
+                <!-- end of row -->
+            </div>
+            <!-- end of container -->
         </div>
-    </div> <!-- end of cards-1 -->
+    </div>
+    <!-- end of cards-1 -->
     <!-- end of about -->
 
 
@@ -218,10 +226,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>About The Team</h2>
-                    <p class="p-heading p-large">Meet our team of biomedical engineers who designed this website of
-                        medical equipment management system.</p>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
+                    <p class="p-heading p-large">Meet our team of biomedical engineers who designed this website of medical equipment management system.</p>
+                </div>
+                <!-- end of col -->
+            </div>
+            <!-- end of row -->
             <div class="row">
                 <div class="col-lg-12">
 
@@ -229,50 +238,62 @@
                     <div class="team-member">
                         <div class="image-wrapper">
                             <img class="img-fluid" src="images/team-member-4.svg" alt="alternative">
-                        </div> <!-- end of image-wrapper -->
+                        </div>
+                        <!-- end of image-wrapper -->
                         <p class="p-large"><strong>Alaa Gamal</strong></p>
                         <p class="job-title">Biomedical Engineer</p>
 
-                    </div> <!-- end of team-member -->
+                    </div>
+                    <!-- end of team-member -->
                     <!-- end of team member -->
 
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
                             <img class="img-fluid" src="images/team-member-1.svg" alt="alternative">
-                        </div> <!-- end of image wrapper -->
+                        </div>
+                        <!-- end of image wrapper -->
                         <p class="p-large"><strong>Salma Hamza</strong></p>
                         <p class="job-title">Biomedical Engineer</p>
 
-                    </div> <!-- end of team-member -->
+                    </div>
+                    <!-- end of team-member -->
                     <!-- end of team member -->
 
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
                             <img class="img-fluid" src="images/team-member-2.svg" alt="alternative">
-                        </div> <!-- end of image wrapper -->
+                        </div>
+                        <!-- end of image wrapper -->
                         <p class="p-large"><strong>Abdallah Elsayed</strong></p>
                         <p class="job-title">Biomedical Engineer</p>
 
-                    </div> <!-- end of team-member -->
+                    </div>
+                    <!-- end of team-member -->
                     <!-- end of team member -->
 
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
                             <img class="img-fluid" src="images/team-member-3.svg" alt="alternative">
-                        </div> <!-- end of image wrapper -->
+                        </div>
+                        <!-- end of image wrapper -->
                         <p class="p-large"><strong>Marwa Adel</strong></p>
                         <p class="job-title">Biomedical Engineer</p>
 
-                    </div> <!-- end of team-member -->
+                    </div>
+                    <!-- end of team-member -->
                     <!-- end of team member -->
 
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-4 -->
+                </div>
+                <!-- end of col -->
+            </div>
+            <!-- end of row -->
+        </div>
+        <!-- end of container -->
+    </div>
+    <!-- end of basic-4 -->
     <!-- end of team -->
 
 
@@ -280,14 +301,22 @@
 
 
     <!-- Scripts -->
-    <script src="js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="js/popper.min.js"></script> <!-- Popper tooltip library for Bootstrap -->
-    <script src="js/bootstrap.min.js"></script> <!-- Bootstrap framework -->
-    <script src="js/swiper.min.js"></script> <!-- Swiper for image and text sliders -->
-    <script src="js/jquery.magnific-popup.js"></script> <!-- Magnific Popup for lightboxes -->
-    <script src="js/jquery.easing.min.js"></script> <!-- jQuery Easing for smooth scrolling between anchors -->
-    <script src="js/validator.min.js"></script> <!-- Validator.js - Bootstrap plugin that validates forms -->
-    <script src="js/scripts.js"></script> <!-- Custom scripts -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="js/popper.min.js"></script>
+    <!-- Popper tooltip library for Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Bootstrap framework -->
+    <script src="js/swiper.min.js"></script>
+    <!-- Swiper for image and text sliders -->
+    <script src="js/jquery.magnific-popup.js"></script>
+    <!-- Magnific Popup for lightboxes -->
+    <script src="js/jquery.easing.min.js"></script>
+    <!-- jQuery Easing for smooth scrolling between anchors -->
+    <script src="js/validator.min.js"></script>
+    <!-- Validator.js - Bootstrap plugin that validates forms -->
+    <script src="js/scripts.js"></script>
+    <!-- Custom scripts -->
     <!--===============================================================================================-->
     <script src="vendor/animsition/js/animsition.min.js"></script>
     <!--===============================================================================================-->
